--- a/main.html
+++ b/main.html
@@ -41,6 +41,14 @@
                             </div>
                             <!-- Profile dropdown panel (hidden by default) -->
                             <div id="profile-dropdown" class="hidden origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+                                <div class="px-4 py-2 border-b border-gray-100">
+                                    <div id="dropdown-user-name" class="text-sm font-medium text-gray-900">Loading...</div>
+                                    <div id="dropdown-user-email" class="text-xs text-gray-500">Please wait</div>
+                                    <div class="flex items-center mt-1">
+                                        <i class="fas fa-phone text-xs text-gray-400 mr-1"></i>
+                                        <div id="dropdown-user-phone" class="text-xs text-gray-500">Please wait</div>
+                                    </div>
+                                </div>
                                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Your Profile</a>
                                 <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Settings</a>
                                 <a href="#" id="logout-button" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Sign out</a>
