--- a/fleet-test.html
+++ b/fleet-test.html
@@ -7,6 +7,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Authentication pre-check script - runs before page loads -->
+    <script src="js/auth-check.js"></script>
     <style>
         body {
             margin: 0;
