--- a/main.html
+++ b/main.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="css/vehicle-visualization.css">
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Authentication pre-check script - runs before page loads -->
+    <script src="js/auth-check.js"></script>
 </head>
 <body class="bg-gray-100 min-h-screen">
     <!-- Top Navigation -->
